fix overflow of button height

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -48,6 +48,7 @@
 
 .label {
   line-height: inherit;
+  max-height: 14px;
 }
 
 .smallLabel {
